# trackpad-is-too-damn-big

./: CMakeLists.txt  Devices.hpp  EventFilters.hpp  EventHandlers.hpp  README.md  cmdparser.hpp  main.cpp
src/: cmdparser.hpp  devices.hpp  evdev_helper.c  event_filters.hpp  event_handlers.hpp  main.cpp  simple_parser.hpp
